--- a/tufte.css
+++ b/tufte.css
@@ -46,7 +46,7 @@ body {
     margin-right: auto;
     padding-left: 12.5%;
     font-family: et-book, Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif;
-    background-color: #fffff8;
+    background-color: #F6FDFD;
     color: #111;
     max-width: 1400px;
     counter-reset: sidenote-counter;
@@ -461,7 +461,7 @@ label.margin-toggle:not(.sidenote-number) {
 
     img {
         width: 100%;
-    } 
+    }
 }
 
 table {
@@ -512,7 +512,7 @@ tr:nth-child(even) {
         /* Add a bottom border to all table rows */
         border-bottom: 1px solid #ddd;
     }
-    
+
  #myTable tr.header, #myTable tr:hover {
         /* Add a grey background color to the table header and on hover */
         background-color: #f1f1f1;
